# Segment-Tree-Battle-Simulator

./: README.md
.github/workflows/: ci.yml
backend/: .env.example  requirements.txt
backend/app/: main.py
backend/app/ai/: base.py  factory.py  local.py  ollama.py  openrouter.py
backend/app/api/routes/: health.py  matches.py
backend/app/core/: config.py  logging.py
backend/app/db/: database.py  models.py
backend/app/engine/: battle.py  operations.py  segment_tree.py  team.py
backend/app/schemas/: match.py
backend/app/services/: match_service.py
backend/tests/: conftest.py  test_ai.py  test_api.py  test_battle.py  test_segment_tree.py
docs/: AUDIT.md  DEPLOYMENT.md  EXECUTION_PLAN.md  PRD.md
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts  types.ts
frontend/src/components/: ActionLog.tsx  ScoreBoard.tsx  TeamPanel.tsx  TreeView.tsx
frontend/src/pages/: ArenaPage.tsx  HomePage.tsx  VisualizerPage.tsx
frontend/src/store/: matchStore.ts
legacy/cpp/: CMakeLists.txt  README.md
legacy/cpp/scripts/: generate_data.py
legacy/cpp/src/: SegmentTree.cpp
legacy/cpp/src/TreeOperations/: UpdateOperations.cpp
